handle race condition in findOrCreateMunicipality with retry-on-conflict